Add chapter 5 pictures

--- a/willpower/chapter5.tex
+++ b/willpower/chapter5.tex
@@ -47,6 +47,11 @@
 
 \infobox{Жыцьцё~--- гэта рух, і калі руху становіцца менш, то становіцца менш і жыцьця.}
 
+\begin{figure*}[htb!]
+  \centering
+  \includegraphics[scale=1.2]{willpower/ch5/1.pdf}
+\end{figure*}
+
 Гэта такое замкнёнае кола: чым больш мы фізычна актыўныя, тым лягчэй нам падтрымліваць гэтую самую актыўнасьць. Апроч іншага, практыкаваньні важныя для падтрыманьня дастатковай цяглічнай масы: у~сярэднім з~35 гадоў пачынае адбывацца паступовая страта цяглічнай масы, якая з~узростам толькі ўзмацняецца (саркапэнія), і цягліцы замяшчаюцца тлушчам.
 
 Размаўляючы з~многімі людзьмі, я дзіўлюся, наколькі мы недаацэньваем важнасьць руху і пераацэньваем важнасьць спорту. Рух ня толькі для таго, каб напампоўвацца, рух уплывае на ўсе сфэры жыцьця~--- ад упэўненасьці ў~сабе, кантролю апэтыту, паляпшэньня працы мозгу і шматлікага іншага. Фізычная актыўнасьць~--- гэта яшчэ і прывабнасьць і сэксуальнасьць за кошт кантролю вагі, лепшай структуры цела і выдатнага цяглічнага тонусу.
@@ -65,6 +70,11 @@
 
 \emph{У прадстаўнікоў плямёнаў паляўнічых-зьбіральнікаў нават з~узростам не адбываецца прыкметнага павелічэньня артэрыяльнай гіпэртэнзіі. Чаму? Таму што іх звычайная паўсядзённая актыўнасьць, такая як хада пешшу, зьмена паставы, сядзеньне на кукішках, у~14 (!) разоў большая, чым у~эўрапейцаў. Чыньнік сонца, якое таксама зьмяншае ціск, таксама грае сваю ролю.}
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch5/2.pdf}
+\end{figure}
+
 Пры любой актыўнасьці выдзяляецца аксід азоту NO~--- ён ня толькі зьніжае ціск, але і пашырае сасуды, запавольвае працэсы старэньня, паляпшае працу мітахондрый, памяншае акісьляльны стрэс, важны для імунітэту. У мужчынаў першымі часта пакутуюць сасуды чэлеса, а~эрэктыльныя парушэньні ў~два разы павялічваюць імавернасьць ня толькі інфаркту, інсульту, але і на 33\,\% павялічваюць рызыку раньняй сьмерці. Ужо калі вам пляваць на вашыя цягліцы, няўжо вам напляваць і на сваю эрэкцыю?
 
 \subsection*{Батанік ці мацак?}
@@ -76,6 +86,11 @@
 \emph{У пажылых людзей 45-хвілінны шпацыр хуткім крокам тры разы на тыдзень можа павялічыць аб'ём гіпакампа на 2--3\,\%. Гучыць ня вельмі натхняльна, але гэтага дастаткова, каб зь лішкам перакрыць узроставае паніжэньне яго аб'ёму.}
 
 Як казаў Ніцшэ, «не давярай аніводнай думцы, якая нарадзілася ў~нерухомасьці». Рух пачынаецца з~актыўнасьці нэўронаў, і вельмі многія структуры мозгу так ці інакш зьвязаныя з~рухам. Таму фізычная актыўнасьць крытычна важная як для мазгавой прадуктыўнасьці, так і для прафіляктыкі нэўрадэгенэратыўных захворваньняў. Дастаткова рухаючыся, мы зьніжаем выяўленасьць дэпрэсіі ды павышаем выпрацоўку асаблівага нэўратрафічнага чыньніка мозгу BDNF, які павялічвае нэўраплястычнасьць.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch5/3.pdf}
+\end{figure}
 
 \emph{Далёка ня ўсе віды актыўнасьці стымулююць моцнае выдзяленьне чыньніку росту нэўронаў і гліяльных клетак, напрыклад расьцяжка аказалася неэфэктыўная, а~вось бег і сілавыя віды спорту выдатна дапамагаюць «паразумнець». Таму я не лічу ёгу і расьцяжку адэкватнай заменай фізычнай актыўнасьці.}
 
@@ -96,6 +111,11 @@
 \infobox{Чым даўжэй вы трэніруецеся, тым больш прыкметна нарастае розьніца паміж вамі і тымі, хто ляжыць на канапе, менавіта ў~разрэзе рызыкі для здароўя. І наадварот: калі вы рухаецеся менш, усе гэтыя лічбы працуюць супраць вас.}
 
 \textbf{Гіпадынамія} павялічвае рызыку інфаркту ў~два разы, сьмяротнасьці ад яго~--- у~тры разы, таксама павышаецца рызыка атэрасклерозу і тромбаўтварэньня. Расьце рызыка захворваньняў суставаў, зьніжаецца лібіда, нарастае атлусьценьне. Кожны трэці выпадак цукроўкі, кожны чацьвёрты выпадак раку малочнай залозы і тоўстай кішкі зьвязаны зь нізкай рухальнай актыўнасьцю. Што ўжо казаць пра вэнозны застой, завалы, гемарой. Гіпадынамія на 50\,\% павышае рызыку сьмяротнасьці ад усіх прычынаў і на 150\,\% рызыку сардэчна-сасудзістых захворваньняў.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch5/4.pdf}
+\end{figure}
 
 Таўсьцейшыя людзі сядзяць на дзьве гадзіны даўжэй, чым людзі са звычайнай масай цела. Узьнікае заганнае кола: чым больш сядзім, тым таўсьцейшымі робімся, а~чым таўсьцейшымі мы робімся, тым цяжэй нам рухацца. Як апэтыт прыходзіць падчас ежы, так і цяглічная радасьць зьяўляецца пасьля руху. Чым актыўней мы рухаемся, тым лягчэй нам гэта рабіць, тым лепей працуюць цягліцы і тым болей задавальненьня мы атрымліваем і меней сядзім.
 
@@ -147,6 +167,11 @@
 
 Нашы продкі садзіліся толькі для адпачынку, калі стамляліся. Многія доўгажыхары, хоць і не займаюцца спэцыяльна спортам, цэлы дзень знаходзяцца ў~руху і амаль не сядзяць. Карысна частку сядзячай працы перанесьці ``на ногі'' і пачаць працаваць стоячы. У гэтым няма нічога незвычайнага: яшчэ нядаўна людзі працавалі стоячы, за канторкамі. Калі мы працуем стоячы, у~нас задзейнічаныя буйныя групы цягліц, а~нагрузка на сьпіну ў~два разы меншая ў~параўнаньні зь сядзеньнем.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch5/5.pdf}
+\end{figure}
+
 \emph{Цяпер існуе вялікая колькасьць сталоў і спэцыяльных падставак для працы стоячы~--- вы можаце выбраць на свой густ. Галоўнае~--- сачыце за базавай эрганомікай.}
 
 Праца стоячы спальвае на 1,36 кілакалёрыяў у~хвіліну больш, чым сядзеньне. Гэта амаль 80 дадатковых калёрыяў у~гадзіну. Стаяньне на працягу дзьвюх гадзінаў на 2\,\% зьніжае ўзровень глюкозы ў~крыві і на 11\,\%~--- узровень трыгліцерыдаў. Становішча стоячы~--- гэта больш моцная поза, таму мы лепей трываем стрэс і падвышаем прадуктыўнасьць, бо пракрастынаваць стоячы нашмат складаней.
@@ -159,7 +184,14 @@
 
 \emph{Навукоўцы, дасьледуючы лад жыцьця паляўнічых-зьбі\-раль\-ні\-каў хадза, выявілі, што яны даволі шмат сядзяць. Вывучэньне паказала, што з~пункту гледжаньня біямэханікі сядзеньне на кукішках дае нашмат больш высокую статычную нагрузку на цягліцы ног і кора, чым звычайнае сядзеньне, набліжаючыся да хады! Гэта вядзе і да меншых рызыкаў для здароўя. Поза на кукішках можа быць адным з~элемэнтаў дынамічнае позы, разам зь сядзеньнем на крэсьле, з~працай стоячы, працай лежачы. Акрамя таго, так бясьпечней за ўсё паднімаць нешта з~падлогі і нашмат карысьней для здароўя зьдзяйсьняць у~ёй дэфэкацыю. На жаль, некаторым будзе складана яе выкарыстаць з~ужо апісаных анатамічных прычынаў.}
 
-\subsection*{Выкарыстоўвайце дынамічную позу} Зьмена позы дапамагае пазьбегнуць зацяканьня цягліцаў, падвысіць прадуктыўнасьць. Ня трэба стаяць гадзінамі: як толькі адчулі стому ў~нагах~--- сядайце і працуйце седзячы. Доўгае нерухомае стаяньне таксама можа нашкодзіць. Для адпачынку на 15 хвілінаў закіньце ногі на стол або сьцяну вышэй за ўзровень галавы~--- гэта паляпшае адток крыві. Вы можаце прыдумаць любыя зручныя вам працоўныя позы~--- галоўнае не захрасаць у~іх надоўга. Працуйце пэрыядычна лежачы~--- гэта падвышае крэатыўнасьць.
+\subsection*{Выкарыстоўвайце дынамічную позу}
+
+Зьмена позы дапамагае пазьбегнуць зацяканьня цягліцаў, падвысіць прадуктыўнасьць. Ня трэба стаяць гадзінамі: як толькі адчулі стому ў~нагах~--- сядайце і працуйце седзячы. Доўгае нерухомае стаяньне таксама можа нашкодзіць. Для адпачынку на 15 хвілінаў закіньце ногі на стол або сьцяну вышэй за ўзровень галавы~--- гэта паляпшае адток крыві. Вы можаце прыдумаць любыя зручныя вам працоўныя позы~--- галоўнае не захрасаць у~іх надоўга. Працуйце пэрыядычна лежачы~--- гэта падвышае крэатыўнасьць.
+
+\begin{figure*}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch5/6.pdf}
+\end{figure*}
 
 \emph{Поза напаўлежачы не перагружае хрыбет і падабаецца многім. Напрыклад, Максім Багдановіч звычайна чытаў і пісаў толькі лежачы, лежачы працавалі палітык Уінстан Чэрчыль, пісьменьнік Марк Твен, а~філёзаф Томас Гобс неяк нават пасьпісваў усе прасьціны~--- настолькі яму не хацелася вылазіць з-пад коўдры па паперу.}
 
@@ -189,6 +221,11 @@
 
 
 \section{Болей нетрэніроўнай актыўнасьці}
+
+\begin{figure*}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch5/7.pdf}
+\end{figure*}
 
 Нетрэніроўная актыўнасьць~--- гэта ўвесь аб'ём паўсядзённай актыўнасьці, уключаючы хатнія справы, працу, камунікацыю і інш. Аб'ём гэтай нагрузкі можа вар'іравацца ў~розных людзей ад 300 ккал да 800 ккал і нават больш. Да яе адносіцца, напрыклад, хадзьба пешшу, пад'ём па лесьвіцы, паход у~краму, работа ў~доме, у~садзе, актыўная гэстыкуляцыя.
 
@@ -256,6 +293,13 @@
 
 Пачынайце з~20-хвілінных прабежак 2--4 разы на тыдзень, цалкам нармальна першы час пэрыядычна пераходзіць на крок. Навічкі могуць чаргаваць хвіліну бегу і хвіліну хуткай хадзьбы і рабіць так па 10--15 разоў. 2--3 такія трэніроўкі на тыдзень будзе цалкам дастаткова, празь некалькі месяцаў можна дадаць дадатковую трэніроўку. Абавязкова сьпіце даўжэй, каб лепш аднаўляцца.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch5/8.pdf}\\
+  \medskip
+  \includegraphics[scale=1.5]{willpower/ch5/9.pdf}
+\end{figure}
+
 Ваш натуральны тэмп павінен даваць магчымасьць казаць поўнымі сказамі: калі размаўляць цяжка, вы перавышаеце сваю аптымальную хуткасьць. Хуткае павышэньне нагрузкі прыводзіць да траўмаў, таму не павялічвайце штотыдзень колькасьць кілямэтраў больш, чым на 10\,\%. Важнае і пачуцьцё меры, бо залішні аб'ём трэніровак падвышае рызыку траўмаў: калена бегуна, запаленьне ахілесава сухажыльля, сындром расколатай галёнкі і інш. Бегайце ў~адмысловым бегавым абутку. Ідэальна бегаць па грунце, яшчэ лепш~--- па перасечанай мясцовасьці з~прыгожымі краявідамі.
 
 \subsection*{Дадайце няўстойлівасьці}
@@ -309,6 +353,11 @@
 
 Навічкам, людзям 40+ і ўсім, хто не імкнецца да рэкордаў, лепш выконваць практыкаваньні зь нізкай інтэнсіўнасьцю і максімальнай колькасьцю паўтораў~--- гэта карысьней для росту цягліцаў і аптымальна для даўгалецьця. Рэкамэндуецца выконваць практыкаваньні з~30--60\,\% максімальнай вагі і дыяпазонам паўтораў 15--20 разоў. Калі трэніровачны аб'ём аднолькавы, то як высока-, так і нізкаінтэнсіўныя сілавыя практыкаваньні даюць падобныя вынікі. Варта заўважыць, што \textbf{рызыка ўскладненьняў пры сярэднеінтэнсіўных сілавых трэніроўках яшчэ меншая, чым пры кардыянагрузках.}
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch5/10.pdf}
+\end{figure}
+
 Пры рэгулярным выкананьні нават адна трэніроўка на тыдзень дае рост цягліцаў, аптымальна дзьве-тры трэніроўкі на тыдзень, але ня больш~--- важна пазьбягаць ператрэніраванасьці. Зьніжэньне сілавых вынікаў, страта задавальненьня ад трэніроўкі, млявасьць~--- сымптомы перагрузкі. Трэніруйцеся рэдка, але інтэнсіўна.
 
 \emph{Павялічыць нагрузку можна, напрыклад, зьмяніўшы хуткасьць уздыму цяжараў, робячы вельмі павольную сілавую трэніроўку. Пры ёй цягліцы нашмат даўжэй знаходзяцца пад нагрузкай, што выклікае вялікую стомленасьць і зьяўляецца стымулам да цяглічнага росту.}
@@ -338,7 +387,7 @@
 
 \textbf{Прыклад практыкаваньняў}: 20-сэкундыя спрынты ў~спалучэньні з~60-сэкунднай хадзьбой ці бегам трушком. ВІІТ на велатрэнажоры: вы 30 сэкундаў круціце пэдалі, максімальна выкладваючыся, затым 60 сэкундаў~--- вельмі павольна, аднаўляючыся. У такім рэжыме можна рабіць бэрпі, бег ва ўпоры лежачы, заскокваньні на плятформу, практыкаваньні ``зорка'' (jumping jacks), ``скалалаз'', скачкі ``ўнутр-вонкі''.
 
-\textbf{Нават 3--7-10 хвілінныя трэніроўкі карысныя.} Але каб яны працавалі, яны павінны быць высокаінтэнсіўнымі, інтэрвальнымі, задзейнічаць буйныя цягліцы ўсяго цела, уключаць сілавыя і аэробныя практыкаваньні. Выкарыстоўвайце шматсустаўныя базавыя практыкаваньні з~высокай энэргаёмістасьцю і не рабіце высокаінтэнсіўны раўнд даўжэй за 30 сэкундаў. 
+\textbf{Нават 3--7--10 хвілінныя трэніроўкі карысныя.} Але каб яны працавалі, яны павінны быць высокаінтэнсіўнымі, інтэрвальнымі, задзейнічаць буйныя цягліцы ўсяго цела, уключаць сілавыя і аэробныя практыкаваньні. Выкарыстоўвайце шматсустаўныя базавыя практыкаваньні з~высокай энэргаёмістасьцю і не рабіце высокаінтэнсіўны раўнд даўжэй за 30 сэкундаў. 
 
 \emph{Дасьледаваньне паказала, што нават невялікія ўсплёскі фізычнай актыўнасьці прыкметна ўплываюць на мэтабалізм. Паддосьледныя зь сядзячым ладам жыцьця круцілі пэдалі пяць разоў па 45 сэкундаў (160 сэкундаў сумарна за дзень) на працягу трох дзён. Пасьля прыёму ежы ўзровень тлушчаў у~крыві быў на 30\,\% ніжэйшы, чым да гэтага. Таму нават самая невялікая актыўнасьць лепшая, чым яе адсутнасьць. Адна хвіліна спрынту з~інтэрваламі ў~20 сэкундаў (тры разы па 20) тры разы на тыдзень на працягу трох месяцаў прыводзіла да паляпшэньня паказьнікаў сардэчна-сасудзістай сыстэмы і мэтабалізму.}
 
@@ -368,6 +417,13 @@
 \emph{«Калі вы ўмееце гаварыць, то вы ўмееце сьпяваць, а~калі вы ўмееце хадзіць~--- вы ўмееце і танцаваць». У дзяцінстве я быў дастаткова нязграбным, але затым пачаў займацца танцамі: спачатку народнымі, затым эўрапейскімі і лацінаамэрыканскімі, потым яшчэ год парнымі танцамі з~жонкай. Часам, калі людзі зьвяртаюцца з~пытаньнем, які від трэніровак ім яшчэ дадаць, гледзячы на іх змучаныя твары, я заўсёды раю танцы.}
 
 Навукова даведзена, што танцы павышаюць узровень дафаміну, паляпшаюць настрой і кагнітыўныя здольнасьці. Пасьля танцу вы адчуваеце меншы стрэс, лепш запамінаеце і прымаеце рашэньні, танец стымулюе нэўраплястычнасьць, паляпшае доўгачасовую памяць. Чалавек вагой 68 кг спальвае 322 ккал за гадзіну танца.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch5/11.pdf}\\
+  \medskip
+  \includegraphics[scale=1.5]{willpower/ch5/12.pdf}
+\end{figure}
 
 \emph{Гульнявыя віды актыўнасьці зь іншымі людзьмі аказваюцца прыкметна больш карыснымі, чым адзіночныя віды спорту, з~пункту гледжаньня доўгатэрміновай пэрспэктывы. Мацней за ўсё падаўжаюць жыцьцё гульні з~ракеткай~--- такія як бадмінтон, тэніс і сквош. Аматары тэнісу жывуць на 9,7 гадоў даўжэй, бадмінтону~--- на 6,2, футболу~--- на 5, ровару~--- на 3,7, плыўцы жывуць на 3,4 гады даўжэй, чым тыя, хто грэбуе фізычнымі практыкаваньнямі.}
 
@@ -624,3 +680,9 @@
 
 3. Памерайце свой МСК.
 
+\clearpage
+\thispagestyle{empty}
+\begin{figure}[htb!]
+  \vspace*{-0.25in}
+  \includegraphics[width=\textwidth]{willpower/ch5/full.pdf}  
+\end{figure}
